# sigmutselcovs

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/sigmutselcovs/: __init__.py  covariates_checks.py  covariates_chromatin.py  covariates_gene_expression.py  covariates_locations.py  covariates_replication_timing.py  covariates_utilities.py  setup.sh
src/sigmutselcovs/data/: gtex_tcga_mapping.json
