[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmutselcovs"
version = "0.1.0"
authors = [
    {name = "Jorge Alfaro-Murillo", email = "jorge.alfaro@ucr.ac.cr"},
]
description = "Covariate matrix builders for sigmutsel"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyBigWig",
    "sigmutsel",
]

[project.urls]
Homepage = "https://github.com/alfaromurillo/sigmutselcovs"
Repository = "https://github.com/alfaromurillo/sigmutselcovs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sigmutselcovs = ["data/**/*"]
